<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/linear_layout_1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/sprout"
                android:id="@+id/image_1"
                android:contentDescription="@string/get_started" />
            <Button
                android:id="@+id/getStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/get_started"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/linear_layout_2"
            >

            <ImageView
                android:id="@+id/image_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/crops"
                android:contentDescription="@string/how_to_use" />

            <Button
                android:id="@+id/howToUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use" />


        </LinearLayout>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cse_svuce"
            />
    </LinearLayout>
</RelativeLayout>